--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -63,3 +63,36 @@ spec:
           when: '{{repl ConfigOptionEquals "postgres_type" "external_postgres_inline"}}'
           type: text
           default: sentry
+
+        - name: redis_type
+          type: select_one
+          title: Redis
+          default: embedded_redis
+          items:
+            - name: embedded_redis
+              title: Embedded Redis
+            - name: external_redis_inline
+              title: External Redis
+        - name: embedded_redis_password
+          hidden: true
+          type: password
+          value: "{{repl RandomString 32}}"
+        - name: external_redis_host
+          title: Redis Host
+          when: '{{repl ConfigOptionEquals "redis_type" "external_redis_inline"}}'
+          type: text
+          default: redis
+        - name: external_redis_port
+          title: Redis Port
+          when: '{{repl ConfigOptionEquals "redis_type" "external_redis_inline"}}'
+          type: text
+          default: "6379"
+        - name: external_redis_user
+          title: Redis Username
+          when: '{{repl ConfigOptionEquals "redis_type" "external_redis_inline"}}'
+          type: text
+        - name: external_redis_password
+          title: Redis Password
+          when: '{{repl ConfigOptionEquals "redis_type" "external_redis_inline"}}'
+          type: password
+          required: true
