--- a/manifests/worker-deployment.yaml
+++ b/manifests/worker-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: sentry-worker
-  replicas: 2
+  replicas: repl{{ ConfigOption `worker_replicas`}}
   template:
     metadata:
       labels:
