--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -24,7 +24,7 @@ spec:
         - name: worker_replicas
           title: Worker Replicas
           type: text
-          default: 2
+          default: "2"
           required: true
     - name: database
       title: Database
@@ -101,3 +101,32 @@ spec:
           when: '{{repl ConfigOptionEquals "redis_type" "external_redis_inline"}}'
           type: password
           required: true
+    - name: smtp_settings
+      title: SMTP Settings
+      description: Configure SMTP Settings
+      items:
+        - name: enable_smtp
+          title: Enable SMTP
+          help_text: Enable SMTP
+          type: bool
+          default: "0"
+        - name: smtp_host
+          title: SMTP Hostname
+          help_text: Set SMTP Hostname
+          type: text
+          when: repl{{ ConfigOptionEquals "enable_smtp" "1" }}
+        - name: smtp_port
+          title: SMTP Port
+          help_text: Set SMTP Port
+          type: text
+          when: repl{{ ConfigOptionEquals "enable_smtp" "1" }}
+        - name: smtp_user
+          title: SMTP User
+          help_text: Set SMTP User
+          type: text
+          when: repl{{ ConfigOptionEquals "enable_smtp" "1" }}
+        - name: smtp_password
+          title: SMTP Password
+          type: password
+          default: 'password'
+          when: repl{{ ConfigOptionEquals "enable_smtp" "1" }}
