--- a/manifests/support-bundle.yaml
+++ b/manifests/support-bundle.yaml
@@ -77,5 +77,5 @@ spec:
           - warn:
               when: "< 1.15.0"
           - pass:
-              message: "You are running a supported version of Kubernetes"
+              message: "Your version of Kubernetes is OK"
 
