--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,22 @@ jobs:
     - name: Get branch name
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: get_branch
-    - name: Create a release on the Unstable Channel
-      run: make release
+    - name: Create a release on Channel associated with the branch
+      uses: docker://replicated/vendor-cli:latest
+      with:
+        args: release create --auto -y
       env:
         REPLICATED_API_TOKEN: ${{ secrets.REPLICATED_API_TOKEN }}
         REPLICATED_APP: ${{ secrets.REPLICATED_APP }}
         GITHUB_BRANCH_NAME: ${{ steps.get_branch.outputs.branch }}
         GITHUB_TAG_NAME: ${{ steps.get_tag.outputs.tag }}
 
-
-
+    - name: Release Kubernetes Installer
+      uses: docker://replicated/vendor-cli:latest
+      with:
+        args: installer create --auto -y
+      env:
+        REPLICATED_API_TOKEN: ${{ secrets.REPLICATED_API_TOKEN }}
+        REPLICATED_APP: ${{ secrets.REPLICATED_APP }}
+        GITHUB_BRANCH_NAME: ${{ steps.get_branch.outputs.branch }}
+        GITHUB_TAG_NAME: ${{ steps.get_tag.outputs.tag }}
