- Update redis secret when config embedded is selected

--- a/manifests/redis-secret.yaml
+++ b/manifests/redis-secret.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  annotations:
+    kots.io/when: '{{repl ConfigOptionEquals "redis_type" "embedded_redis"}}'
   name: sentry-redis
   labels:
     app: redis
 type: Opaque
 data:
-  redis-password: "TmVDS3J6cWc4aw=="
+  redis-password: '{{repl ConfigOption "embedded_redis_password" | Base64Encode}}'
