--- a/manifests/worker-deployment.yaml
+++ b/manifests/worker-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: sentry-worker
-  replicas: repl{{ ConfigOption `worker_replicas`}}
+  replicas: 30
   template:
     metadata:
       labels:
