--- a/manifests/redis-statefulset.yaml
+++ b/manifests/redis-statefulset.yaml
@@ -21,6 +21,13 @@ spec:
         fsGroup: 1001
         runAsUser: 1001
       serviceAccountName: "default"
+      initContainers:
+      - name: hpe
+        image: busybox
+        command: ["sh", "-c", "chmod 777 /bitnami/redis/data"]
+        volumeMounts:
+        - name: redis-data
+          mountPath: "/bitnami/redis/data"
       containers:
       - name: sentry-redis
         image: "docker.io/bitnami/redis:4.0.11-debian-9"
