--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -15,7 +15,7 @@ spec:
         - name: admin_password
           title: Admin Password
           type: password
-          default: 'pa55word'
+          default: 'password'
         - name: secret_key
           title: Secret Key
           type: password
