--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -11,7 +11,7 @@ spec:
         - name: admin_username
           title: Admin Username
           type: text
-          default: 'amit'
+          default: 'amitsc'
         - name: admin_password
           title: Admin Password
           type: password
