--- a/manifests/replicated-app.yaml
+++ b/manifests/replicated-app.yaml
@@ -3,8 +3,8 @@ kind: Application
 metadata:
   name: sentry-enterprise
 spec:
-  title: Sentry Enterprise
-  icon: https://sentry-brand.storage.googleapis.com/sentry-glyph-black.png
+  title: Ericsson 5G Dispatch
+  icon: https://static-00.iconduck.com/assets.00/ericsson-icon-419x512-fidcuyvt.png
   statusInformers:
     - service/sentry
     - deployment/sentry-web
